src/login/styles/_Header.scss
@import "./variables.scss";
.banner {
  background-color: $white;

  /* Contains logo + nav-wrapper */
  header {
    display: flex;
    justify-content: space-between;
    padding: 1rem 0;
    align-items: center;

    .eduid-logo {
      width: 117px;
      height: 40px;
      background-image: url(../../../img/eduid-logo-black.svg);
      background-size: contain;
      background-repeat: no-repeat;
      margin-left: 1rem;
      position: relative;
      z-index: 2;

      // Mobile logo
      @media (max-width: $bp-lg) {
        position: absolute;
        left: 0;
        top: 1rem;
        width: 99px;
        height: 34px;
      }
    }

    // .header-user {
    //   font-size: 1rem;
    //   text-align: right;
    //   width: 100%;
    //   font-family: $proxima-bold;

    //   @media (min-width: $bp-sm) {
    //     padding-right: 1rem;
    //     font-size: 1.125rem;
    //   }
    // }

    .hamburger-react {
      display: none;
    }

    button.btn {
      margin-right: 1rem;
      z-index: 3;
    }

    // Mobile header logged in
    &:not(.show-register) {
      @media (max-width: $bp-lg) {
        flex-direction: column;
        align-items: flex-end;
        padding: 0.5rem 0;

        .hamburger-react {
          display: block;
          width: 54px !important;
        }
      }
    }
  }
}

